--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-<div class="container mt-5">
+<div class="container-fluid mt-5">
     <h1 class="mb-3">Network Status</h1>
     <table class="table table-striped">
         <thead>
