--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
 <div class="container-fluid mt-5">
     <h1 class="mb-3">Network Status</h1>
+    <div class="mb-3">
+        <button id="refreshButton" class="btn btn-primary">Refresh</button>
+        <div class="form-check form-check-inline ml-3">
+            <input class="form-check-input" type="checkbox" id="autoRefreshCheckbox">
+            <label class="form-check-label" for="autoRefreshCheckbox">Auto-refresh</label>
+        </div>
+        <label for="refreshDelay" class="ml-3">Delay (seconds):</label>
+        <input type="number" id="refreshDelay" class="form-control ml-1" style="width: auto; display: inline;" min="1" max="3600" value="5">
+    </div>
     <table class="table table-striped">
         <thead>
         <tr>
